--- a/ps2.Rmd
+++ b/ps2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Psych 251 PS2: Tidying Data"
-author: "Andrew Lampinen"
-date: "September 27, 2018"
+author: "Griffin Dietz"
+date: "October 14, 2018"
 output:
   html_document:
     toc: true
@@ -19,7 +19,7 @@ The dataset we're using comes from the OSF Reproduciblity project replication of
 
 First, let's load the libraries we're going to use.
 
-```{r}
+```{r warning=FALSE}
 library(foreign) # for reading spss formatted data
 library(tidyr)
 library(dplyr)
@@ -49,13 +49,12 @@ colnames(d)
 
 And see if you can figure out what range the likert scores are in. What's the highest number on the likert scale, and what's the lowest? (Hint, `d$Game1Angry1` is one of the likert rating columns, and you may want to use `unique` or `range` or `hist`)
 
-```{r}
-## your code here
-
+```{r echo=TRUE}
+unique(d$Game1Angry1)
 ```
 
-Highest number: [Your answer here]
-Lowest number: [Your answer here]
+Highest number: 1
+Lowest number: 7
 
 # cleaning up a bit
 
@@ -79,9 +78,9 @@ Notice that participant 23 has missing values for part 1.
 
 The researchers have made a column called `DoNotUse` based on their exlusion criteria. Use this column to filter the dataframe! (hint: this is a little trickier than it might be because of how R treats NA values. You may want to check out `?is.na`.)
 
-```{r}
+```{r echo=TRUE}
 filtered_d = d %>% 
-  filter(   ) # your code here: exclude subjects that are marked as "DoNotUse"
+  filter(is.na(DoNotUse)) # your code here: exclude subjects that are marked as "DoNotUse"
 ```
 
 It's good practice to assign a new variable name (in this case `filtered_d`) to a data frame when you change it in an important way, or apply a code chunk that shouldn't be run twice. This helps prevent you seeing different results when you run your code in chunks (and might run one multiple times, or skip it, etc.) vs. knit the document.
@@ -117,9 +116,9 @@ rating_hyp_d = filtered_d %>%
 
 Now you try! Fill in the selection criteria to get rid of the "Game" columns, which we don't need for the performance hypothesis. (It's simpler than the code block above, because you don't need to do a `filter` first, only a `select`.)
 
-```{r}
+```{r echo=TRUE}
 performance_hyp_d = filtered_d %>% 
-  select( ) # your code here: remove the columns containing "Game" in the name
+  select(-contains("Game")) # your code here: remove the columns containing "Game" in the name
 ```
 
 # Converting to long form
@@ -152,9 +151,9 @@ performance_hyp_long_d = performance_hyp_d %>%
 
 And you can convert the rating dataset! (Call the "Key" column "Measurement" and call the "Value" column "Rating", so that the code below will work)
 
-```{r}
+```{r echo=TRUE}
 rating_hyp_long_d = rating_hyp_d %>%
-  ## your code here
+  gather(Measurement, Rating, -c("Subject", "Cond"))
 ```
 
 # Splitting columns
@@ -171,10 +170,10 @@ performance_hyp_long_d = performance_hyp_long_d %>%
 
 Now you can help! For the rating dataset, write a test on a measurement name, using `grepl` or `%in%` to figure out whether it's a recall or a music rating. Your new `IsRecall` column should be true if the measurement name contain either "Friends" or "Strangers".
 
-```{r}
+```{r echo=TRUE}
 rating_hyp_long_d = rating_hyp_long_d %>%
   mutate(
-    IsRecall = ,## Your code here
+    IsRecall = grepl("Friends|Strangers", Measurement)
   )
 ```
 
@@ -220,9 +219,10 @@ performance_hyp_long_d = performance_hyp_long_d %>%
 
 The rating hypothesis analysis also requires some grouped manipulation: the experimenters collected repeated measures (ratings in each emotion category and each music/recall category from each game). They then averaged all the ratings that were from a given emotion and game type together to produce a nice summary. Your job is to implement this, calling the new variable MeanRating, and save the summarized data in a new data frame called `rating_summary_d`. (Hint: use a `group_by` and a `summarize`.)
 
-```{r}
+```{r echo=TRUE}
 rating_summary_d = rating_hyp_long_d %>% 
-  ## your code here
+  group_by(Emotion, ConfrontationalGame) %>%
+  summarise(MeanRating = mean(Rating, na.rm=T))
 ```
 
 Let's take a look at the result:
@@ -272,9 +272,11 @@ If you don't understand every step of that code (or any other `dplyr` code), it 
 
 Now we're finally to reproduce Fig. 2 from Tamir et al., we just need to get the mean differences within each game and each kind of music, and save them to a variable called `MeanImprovementScore`:
 
-```{r}
+```{r echo=TRUE}
 performance_diff_summary_d = performance_diff_d %>%
-  ## Your code here
+  group_by(ConfrontationalGame, MusicCondition) %>%
+  summarise(MeanImprovementScore = mean(ImprovementScore, na.rm=T), sd = sd(ImprovementScore, na.rm=T), n = n()) %>%
+  mutate(SEM = sd / sqrt(n))
 ```
 
 Let's take a look at your result (if it has `NA` values, how can you fix it?):
@@ -288,7 +290,8 @@ and plot it!
 ```{r TamirFig2}
 ggplot(performance_diff_summary_d, aes(x=ConfrontationalGame, y=MeanImprovementScore, fill=MusicCondition)) +
   geom_bar(position="dodge", stat="identity") + 
-  scale_fill_brewer(palette="Set1")
+  scale_fill_brewer(palette="Set1") + 
+  geom_errorbar(aes(ymin=MeanImprovementScore-SEM,ymax=MeanImprovementScore+SEM),width=0.2,position=position_dodge(.9))
 ```
 
 (Bonus: also calculate the SEM in the summary data, and then add errorbars to the plot with `geom_errorbar`!)
