--- a/ps4.Rmd
+++ b/ps4.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Psych 251 PS4: Simulation'
-author: "Mike Frank"
+author: "Griffin Dietz"
 date: "2018"
 output: 
   html_document:
@@ -17,14 +17,37 @@ library(tidyverse)
 
 Let's start by convincing ourselves that t-tests have the appropriate false positive rate. Run 10,000 t-tests with standard, normally-distributed data from a made up 30-person, single-measurement experiment (the command for sampling from a normal distribution is `rnorm`). What's the mean number of "significant" results?
 
+> The mean number of significant results is about .05.
+
 First do this using a `for` loop.
 
 ```{r}
+num_sig_for = 0
+for (i in 1:10000) {
+  norm_data <- rnorm(30)
+  p_val <- t.test(norm_data)$p.value
+  if(p_val < .05) {
+    num_sig_for = num_sig_for + 1
+  }
+}
+mean_for = num_sig_for / 10000
+mean_for
 ```
 
 Next, do this using the `replicate` function:
 
 ```{r}
+fn <- function() {
+  norm_data <- rnorm(30)
+  if(t.test(norm_data)$p.value < 0.05) {
+    return(1)
+  }
+  return(0)
+}
+vec <- replicate(10000, fn())
+num_sig_rep = sum(vec)
+mean_rep = num_sig_rep / 10000
+mean_rep
 ```
 
 Ok, that was a bit boring. Let's try something more interesting - let's implement a p-value sniffing simulation, in the style of Simons, Nelson, & Simonsohn (2011).
@@ -34,18 +57,33 @@ Consider this scenario: you have done an experiment, again with 30 participants 
 First, write a function that implements this sampling regime.
 
 ```{r}
-double.sample <- function () {
+double.sample <- function (upper_p) {
+  norm_data = rnorm(30)
+  p_val <- t.test(norm_data)$p.value
+  if (p_val < upper_p && p_val > .05) {
+    norm_data <- c(norm_data,rnorm(30))
+    p_val <- t.test(norm_data)$p.value
+  } 
+  if (p_val < .05) {
+    return(1)
+  }else {
+    return(0)
+  }
 }
 ```
 
 Now call this function 10k times and find out what happens. 
 
 ```{r}
+vec <- replicate(10000, double.sample(.25))
+num_sig_rep = sum(vec)
+mean_rep = num_sig_rep / 10000
+mean_rep
 ```
 
 Is there an inflation of false positives? How bad is it?
 
-> ANSWER
+> Yes. We now see and average number of signifianct results at around .071.
 
 Now modify this code so that you can investigate this "double the sample" rule in a bit more depth. Let's see what happens when you double the sample ANY time p > .05 (not just when p < .25), or when you do it only if p < .5 or < .75. How do these choices affect the false positive rate?
 
@@ -54,6 +92,14 @@ HINT: Try to do this by making the function `double.sample` take the upper p val
 HINT 2: You may need more samples. Find out by looking at how the results change from run to run.
 
 ```{r}
+mean_50 <- sum(replicate(10000, double.sample(.5))) / 10000
+mean_50
+
+mean_75 <- sum(replicate(10000, double.sample(.75))) / 10000
+mean_75
+
+mean_90 <- sum(replicate(10000, double.sample(.9))) / 10000
+mean_90
 ```
 
 What do you conclude on the basis of this simulation? How bad is this kind of data-dependent policy?
